[package]
name = "pi-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
hyper = { version = "1.7", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1.9"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shell-words = "1.1"
memchr = "2.7"
arc-swap = "1.7"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
